packages/core/test/benchmark/corpus/negative/bicep-jwk-no-marker.bicep
var exampleJwk = {
  kty: 'RSA'
  n: 'abc'
}
output j object = exampleJwk
